infrastructure/k8s/01-frontend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: uniresearch
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: uniresearch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: uniresearch-frontend:latest
          ports:
            - containerPort: 3000
